--- a/BeamWallet/ViewControllers/Login/PhraseViewController/DisplayPhraseViewController.xib
+++ b/BeamWallet/ViewControllers/Login/PhraseViewController/DisplayPhraseViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,6 +24,7 @@
                 <outlet property="mainetView" destination="BAl-Rc-aG4" id="QTJ-Dq-LYQ"/>
                 <outlet property="stackWidth" destination="bWB-tf-HeN" id="fm9-qU-iiQ"/>
                 <outlet property="testnetView" destination="sM9-AZ-bbZ" id="L4t-Mm-7P3"/>
+                <outlet property="textLabel" destination="fZw-1Z-LcP" id="OMD-cm-kma"/>
                 <outlet property="topOffset" destination="iVY-Qp-wuw" id="P2d-c7-OkW"/>
                 <outlet property="view" destination="1rJ-7R-t7c" id="VKf-OH-GVu"/>
             </connections>
@@ -36,7 +35,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="ieK-AA-2FA">
-                    <rect key="frame" x="30" y="75" width="315" height="445.5"/>
+                    <rect key="frame" x="30" y="55" width="315" height="445.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fZw-1Z-LcP">
                             <rect key="frame" x="0.0" y="0.0" width="315" height="95.5"/>
