--- a/BeamWallet/ViewControllers/Login/PhraseViewController/IntroPhraseViewController.xib
+++ b/BeamWallet/ViewControllers/Login/PhraseViewController/IntroPhraseViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,7 +20,9 @@
             <connections>
                 <outlet property="bottomOffset" destination="NfO-Mj-KRO" id="t5v-7y-S6A"/>
                 <outlet property="mainStack" destination="Cyl-sg-GXv" id="VNL-oV-U0Y"/>
+                <outlet property="nextButton" destination="lc2-JS-VP6" id="prs-6y-4bh"/>
                 <outlet property="stackWidth" destination="D6r-yd-Hcz" id="6Pb-lv-KT9"/>
+                <outlet property="textLabel" destination="dCo-Qh-eFv" id="Zcl-hx-6kn"/>
                 <outlet property="topOffset" destination="Ahq-0O-Ez0" id="qXK-ZZ-ero"/>
                 <outlet property="view" destination="8iw-Ag-QBa" id="DBo-Er-dSv"/>
             </connections>
@@ -33,7 +33,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="Cyl-sg-GXv">
-                    <rect key="frame" x="30" y="75" width="315" height="330.5"/>
+                    <rect key="frame" x="30" y="55" width="315" height="330.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dCo-Qh-eFv">
                             <rect key="frame" x="0.0" y="0.0" width="315" height="115"/>
